add user to add users

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </script>
 
   <script type="text/x-handlebars" data-template-name="users">
-    {{#link-to "users.create" class="create-btn"}} Add user {{/link-to}}
+    {{#link-to "users.create" class="create-btn"}} Add users {{/link-to}}
     <div>Users: {{usersCount}}</div>
     <ul class="users-listing">
     {{#each user in controller}}
